[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/ui/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/loadout_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/fonts/finished.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/Secondary.gd" type="Script" id=4]
[ext_resource path="res://scripts/Perk 1.gd" type="Script" id=5]
[ext_resource path="res://scripts/Primary.gd" type="Script" id=6]
[ext_resource path="res://scripts/Perk 2.gd" type="Script" id=7]
[ext_resource path="res://scripts/Perk 3.gd" type="Script" id=8]
[ext_resource path="res://scripts/Ability.gd" type="Script" id=9]
[ext_resource path="res://scripts/Tactical.gd" type="Script" id=10]
[ext_resource path="res://scripts/Lethal.gd" type="Script" id=11]
[ext_resource path="res://scripts/VBoxContainer.gd" type="Script" id=12]
[ext_resource path="res://scripts/VBoxContainer3.gd" type="Script" id=13]
[ext_resource path="res://scripts/VBoxContainer2.gd" type="Script" id=14]
[ext_resource path="res://scripts/VBoxContainer5.gd" type="Script" id=15]
[ext_resource path="res://scripts/VBoxContainer4.gd" type="Script" id=16]
[ext_resource path="res://scripts/VBoxContainer7.gd" type="Script" id=17]
[ext_resource path="res://scripts/VBoxContainer9.gd" type="Script" id=18]
[ext_resource path="res://scripts/VBoxContainer6.gd" type="Script" id=19]
[ext_resource path="res://scripts/VBoxContainer8.gd" type="Script" id=20]
[ext_resource path="res://scripts/VBoxContainer10.gd" type="Script" id=21]
[ext_resource path="res://scripts/VBoxContainer1.gd" type="Script" id=22]
[ext_resource path="res://scripts/VBoxContainer11.gd" type="Script" id=23]
[ext_resource path="res://scripts/VBoxContainer12.gd" type="Script" id=24]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="loadouts" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Loadouts" type="ScrollContainer" parent="."]
margin_right = 324.0
margin_bottom = 600.0
rect_clip_content = false
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Loadouts"]
margin_right = 312.0
margin_bottom = 1276.0
rect_min_size = Vector2( 200, 600 )

[node name="Loadout1" type="Button" parent="Loadouts/VBoxContainer"]
margin_right = 312.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 1"
flat = true

[node name="Loadout2" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 64.0
margin_right = 312.0
margin_bottom = 124.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 2"
flat = true

[node name="Loadout3" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 128.0
margin_right = 312.0
margin_bottom = 188.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 3"
flat = true

[node name="Loadout4" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 192.0
margin_right = 312.0
margin_bottom = 252.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 4"
flat = true

[node name="Loadout5" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 256.0
margin_right = 312.0
margin_bottom = 316.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 5"
flat = true

[node name="Loadout6" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 320.0
margin_right = 312.0
margin_bottom = 380.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 6"
flat = true

[node name="Loadout7" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 384.0
margin_right = 312.0
margin_bottom = 444.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 7"
flat = true

[node name="Loadout8" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 448.0
margin_right = 312.0
margin_bottom = 508.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 8"
flat = true

[node name="Loadout9" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 512.0
margin_right = 312.0
margin_bottom = 572.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 9"
flat = true

[node name="Loadout10" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 576.0
margin_right = 312.0
margin_bottom = 636.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 10"
flat = true

[node name="Loadout11" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 640.0
margin_right = 312.0
margin_bottom = 700.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 11"
flat = true

[node name="Loadout12" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 704.0
margin_right = 312.0
margin_bottom = 764.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 12"
flat = true

[node name="Loadout13" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 768.0
margin_right = 312.0
margin_bottom = 828.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 13"
flat = true

[node name="Loadout14" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 832.0
margin_right = 312.0
margin_bottom = 892.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 14"
flat = true

[node name="Loadout15" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 896.0
margin_right = 312.0
margin_bottom = 956.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 15"
flat = true

[node name="Loadout16" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 960.0
margin_right = 312.0
margin_bottom = 1020.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 16"
flat = true

[node name="Loadout17" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 1024.0
margin_right = 312.0
margin_bottom = 1084.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 17"
flat = true

[node name="Loadout18" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 1088.0
margin_right = 312.0
margin_bottom = 1148.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 18"
flat = true

[node name="Loadout19" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 1152.0
margin_right = 312.0
margin_bottom = 1212.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 19"
flat = true

[node name="Loadout20" type="Button" parent="Loadouts/VBoxContainer"]
margin_top = 1216.0
margin_right = 312.0
margin_bottom = 1276.0
rect_min_size = Vector2( 200, 60 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Loadout 20"
flat = true

[node name="mainmenu" type="Button" parent="."]
margin_left = 561.0
margin_top = 574.0
margin_right = 1333.0
margin_bottom = 620.0
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "< Back to Main Menu"
flat = true

[node name="Primary" type="Button" parent="."]
margin_left = 324.0
margin_top = 4.0
margin_right = 467.0
margin_bottom = 34.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
enabled_focus_mode = 0
text = "Primary"
flat = true
script = ExtResource( 6 )

[node name="Secondary" type="Button" parent="."]
margin_left = 324.0
margin_top = 34.0
margin_right = 467.0
margin_bottom = 64.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
enabled_focus_mode = 0
text = "Secondary"
flat = true
script = ExtResource( 4 )

[node name="Perk 1" type="Button" parent="."]
margin_left = 324.0
margin_top = 64.0
margin_right = 467.0
margin_bottom = 94.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
enabled_focus_mode = 0
text = "Perk 1"
flat = true
script = ExtResource( 5 )

[node name="Perk 2" type="Button" parent="."]
margin_left = 324.0
margin_top = 94.0
margin_right = 467.0
margin_bottom = 124.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
enabled_focus_mode = 0
text = "Perk 2"
flat = true
script = ExtResource( 7 )

[node name="Perk 3" type="Button" parent="."]
margin_left = 324.0
margin_top = 124.0
margin_right = 467.0
margin_bottom = 154.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
enabled_focus_mode = 0
text = "Perk 3"
flat = true
script = ExtResource( 8 )

[node name="Ability" type="Button" parent="."]
margin_left = 324.0
margin_top = 154.0
margin_right = 467.0
margin_bottom = 184.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
enabled_focus_mode = 0
text = "Ability"
flat = true
script = ExtResource( 9 )

[node name="Tactical" type="Button" parent="."]
margin_left = 324.0
margin_top = 184.0
margin_right = 467.0
margin_bottom = 214.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
enabled_focus_mode = 0
text = "Tactical"
flat = true
script = ExtResource( 10 )

[node name="Lethal" type="Button" parent="."]
margin_left = 324.0
margin_top = 214.0
margin_right = 467.0
margin_bottom = 244.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.54902, 0, 1 )
enabled_focus_mode = 0
text = "Lethal"
flat = true
script = ExtResource( 11 )

[node name="Primaries" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.5
margin_top = -190.0
margin_right = 397.5
margin_bottom = 190.0

[node name="TabContainer" type="TabContainer" parent="Primaries"]
margin_right = 793.0
margin_bottom = 374.0
tab_align = 0

[node name="Assault Rifles" type="Tabs" parent="Primaries/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="Primaries/TabContainer/Assault Rifles"]
margin_right = 200.0
margin_bottom = 345.0
rect_min_size = Vector2( 200, 345 )

[node name="VBoxContainer" type="VBoxContainer" parent="Primaries/TabContainer/Assault Rifles/ScrollContainer"]
margin_right = 200.0
margin_bottom = 345.0
rect_min_size = Vector2( 200, 345 )
script = ExtResource( 12 )

[node name="SMGs" type="Tabs" parent="Primaries/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer2" type="ScrollContainer" parent="Primaries/TabContainer/SMGs"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Primaries/TabContainer/SMGs/ScrollContainer2"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 22 )

[node name="LMGs" type="Tabs" parent="Primaries/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer4" type="ScrollContainer" parent="Primaries/TabContainer/LMGs"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Primaries/TabContainer/LMGs/ScrollContainer4"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 24 )

[node name="Shotguns" type="Tabs" parent="Primaries/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer3" type="ScrollContainer" parent="Primaries/TabContainer/Shotguns"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Primaries/TabContainer/Shotguns/ScrollContainer3"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 14 )

[node name="Marksman Rifles" type="Tabs" parent="Primaries/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer3" type="ScrollContainer" parent="Primaries/TabContainer/Marksman Rifles"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Primaries/TabContainer/Marksman Rifles/ScrollContainer3"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 13 )

[node name="Sniper Rifles" type="Tabs" parent="Primaries/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer3" type="ScrollContainer" parent="Primaries/TabContainer/Sniper Rifles"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Primaries/TabContainer/Sniper Rifles/ScrollContainer3"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 16 )

[node name="Secondaries" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.5
margin_top = -190.0
margin_right = 397.5
margin_bottom = 190.0

[node name="TabContainer" type="TabContainer" parent="Secondaries"]
margin_right = 793.0
margin_bottom = 374.0
tab_align = 0

[node name="Pistols" type="Tabs" parent="Secondaries/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer2" type="ScrollContainer" parent="Secondaries/TabContainer/Pistols"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Secondaries/TabContainer/Pistols/ScrollContainer2"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 15 )

[node name="Launchers" type="Tabs" parent="Secondaries/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = 8.0

[node name="ScrollContainer2" type="ScrollContainer" parent="Secondaries/TabContainer/Launchers"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Secondaries/TabContainer/Launchers/ScrollContainer2"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 19 )

[node name="Melee" type="Tabs" parent="Secondaries/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer2" type="ScrollContainer" parent="Secondaries/TabContainer/Melee"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Secondaries/TabContainer/Melee/ScrollContainer2"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 17 )

[node name="Perks" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.5
margin_top = -190.0
margin_right = 397.5
margin_bottom = 190.0

[node name="TabContainer" type="TabContainer" parent="Perks"]
margin_right = 793.0
margin_bottom = 376.0
tab_align = 0

[node name="Perks" type="Tabs" parent="Perks/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer2" type="ScrollContainer" parent="Perks/TabContainer/Perks"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Perks/TabContainer/Perks/ScrollContainer2"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 20 )

[node name="Abilities" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.5
margin_top = -190.0
margin_right = 397.5
margin_bottom = 190.0

[node name="TabContainer" type="TabContainer" parent="Abilities"]
margin_right = 794.0
margin_bottom = 374.0

[node name="Abilities" type="Tabs" parent="Abilities/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer2" type="ScrollContainer" parent="Abilities/TabContainer/Abilities"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Abilities/TabContainer/Abilities/ScrollContainer2"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 18 )

[node name="Equipment" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -397.5
margin_top = -190.0
margin_right = 397.5
margin_bottom = 190.0

[node name="TabContainer" type="TabContainer" parent="Equipment"]
margin_right = 794.0
margin_bottom = 374.0

[node name="Tactical" type="Tabs" parent="Equipment/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer2" type="ScrollContainer" parent="Equipment/TabContainer/Tactical"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Equipment/TabContainer/Tactical/ScrollContainer2"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 21 )

[node name="Lethal" type="Tabs" parent="Equipment/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer2" type="ScrollContainer" parent="Equipment/TabContainer/Lethal"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )

[node name="VBoxContainer" type="VBoxContainer" parent="Equipment/TabContainer/Lethal/ScrollContainer2"]
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 270, 340 )
script = ExtResource( 23 )

[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout1" to="." method="_on_Loadout1_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout2" to="." method="_on_Loadout2_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout3" to="." method="_on_Loadout3_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout4" to="." method="_on_Loadout4_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout5" to="." method="_on_Loadout5_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout6" to="." method="_on_Loadout6_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout7" to="." method="_on_Loadout7_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout8" to="." method="_on_Loadout8_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout9" to="." method="_on_Loadout9_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout10" to="." method="_on_Loadout10_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout11" to="." method="_on_Loadout11_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout12" to="." method="_on_Loadout12_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout13" to="." method="_on_Loadout13_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout14" to="." method="_on_Loadout14_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout15" to="." method="_on_Loadout15_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout16" to="." method="_on_Loadout16_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout17" to="." method="_on_Loadout17_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout18" to="." method="_on_Loadout18_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout19" to="." method="_on_Loadout19_pressed"]
[connection signal="pressed" from="Loadouts/VBoxContainer/Loadout20" to="." method="_on_Loadout20_pressed"]
[connection signal="pressed" from="mainmenu" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="Primary" to="." method="_on_Primary_pressed"]
[connection signal="pressed" from="Secondary" to="." method="_on_Secondary_pressed"]
[connection signal="pressed" from="Perk 1" to="." method="_on_Perk_1_pressed"]
[connection signal="pressed" from="Perk 2" to="." method="_on_Perk_2_pressed"]
[connection signal="pressed" from="Perk 3" to="." method="_on_Perk_3_pressed"]
[connection signal="pressed" from="Ability" to="." method="_on_Ability_pressed"]
[connection signal="pressed" from="Tactical" to="." method="_on_Tactical_pressed"]
[connection signal="pressed" from="Lethal" to="." method="_on_Lethal_pressed"]
